<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activities</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="index">首页</string>
    <string name="loacl">本地</string>
    <string name="search">搜索</string>
    <string name="set">设置</string>
    <string name="me">我的</string>
    <string name="travel_free">自游出行</string>
    <string name="travel_one">首页展示</string>
    <string name="travel_two">猜一猜</string>
    <string name="travel_thr">美女详情</string>
    <string name="travel_fou">美女列表</string>
    <string name="travel_fiv">图灵</string>
    <string name="out">退出</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载....</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="test">TEST</string>
    <string name="photo">拍照</string>
    <string name="grapht">从相册中选取</string>
    <string name="consel">取消</string>
    <string name="reload">重新加载</string>
    <string name="label">Label</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="regest">注册</string>
    <string name="start_cai">开始</string>
    <string name="stop_cai">停止</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">已发送</string>
    <string name="speack">按住 说话</string>
    <string name="stop">停止</string>
    <string name="cont_list">联系人</string>
    <string name="cont_friend">我的好友</string>
    <string name="cont_black_list">黑名单</string>
    <string name="tools_single_friend">添加单个好友</string>
    <string name="tools_search_friend">搜索好友</string>
    <string name="tools_qun_start">发起群聊</string>
    <string name="detail_msg">详细信息</string>
    <string name="user_info">用户信息</string>
    <string name="be_friend">加好友</string>
    <string name="del_friend">删除好友</string>
    <string name="to_black">加入黑名单</string>
    <string name="move_black">从黑名单移除</string>
    <string name="liver">请出本群</string>
    <string name="midel">/</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="neterror">网络异常，请检查网络!</string>
    <string name="main_error">您的账号在另外一台设备上登录了！</string>
    <string name="main_drop">您的账号掉线了！</string>
    <string name="main_loginout">退出登陆！</string>
    <string name="set_iscache">是否清除缓存？</string>
    <string name="set_islagu">是否切换语言？</string>
    <string name="set_cache_succ">缓存清理完成！</string>
    <string name="set_cache_fail">清理缓存失败，需要手动删除文件</string>
    <string name="set_0">扫一扫 </string>
    <string name="set_1">个人信息</string>
    <string name="set_2">修改密码</string>
    <string name="set_3">清理缓存</string>
    <string name="set_4">我的收藏</string>
    <string name="set_5">我的评论</string>
    <string name="set_out_app">退出程序</string>
    <string name="contacts_serv">请输入客服ID</string>
    <string name="contacts_noself">不能添加自己</string>
    <string name="contacts_neting">连接中....</string>
    <string name="contacts_notneting">未连接</string>
    <string name="contacts_addfriend_succ">添加好友成功</string>
    <string name="contacts_addfriend_fail">添加好友失败</string>
    <string name="fields_back">接口传参</string>
    <string name="login_succ">登录成功</string>
    <string name="login_nameorpassfail">用户名密码错误</string>
    <string name="sendimage">请发送jpg图片</string>
    <string name="sendimagefail">图片消息发送失败</string>
    <string name="chatmessage">正在下载....</string>
    <string name="gotevoice">正在实时通话中</string>
    <string name="search_nodata">没有收到任何数据</string>
    <string name="search_nomoredata">没有更多数据了</string>
    <string name="chat_vo_luyin">正在录音语音..</string>
    <string name="chat_vo_time">正在实时语音..</string>
    <string name="chat_no_hismes_more">没有更多历史消息</string>
    <string name="chat_vo_time_notdo">正在实时语音,无法操作</string>
    <string name="chat_roomnotexsist">房间不存在..</string>
    <string name="chat_no_hismes">没有历史记录</string>
    <string name="chat_qiangmai">抢麦失败，先听听别人说什么。</string>
    <string name="chat_you_talking">您正在说话..</string>
    <string name="chat_timeless">时间太短..</string>
    <string name="chat_talking">正在说话..</string>
    <string name="chat_display">群主解散了该群</string>
    <string name="chat_you_reless">您被踢出了群,会话结束</string>
    <string name="chat_succ_jubao">举报成功</string>
    <string name="chat_fail_jubao">举报失败</string>
    <string name="web_reload">页面加载失败，请点击重新加载</string>
    <string name="home_top_askd">问医生</string>
    <string name="home_top_askfoans">点击找医生快速解答</string>
    <string name="home_fragment_tijian">体检专区</string>
    <string name="home_fragment_tjyy">体检预约</string>
    <string name="home_fragment_zndj">智能导检</string>
    <string name="home_fragment_bgcx">报告查询</string>
    <string name="home_fragment_bgjd">报告解读</string>
    <string name="home_fragment_free">免费</string>

</resources>