<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.darly.activities"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/item_header_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <TableRow
        android:id="@+id/set_unlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/set_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/app_btn_select"
            android:gravity="center"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midel" />

        <TextView
            android:id="@+id/set_regest"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/app_btn_select"
            android:gravity="center"
            android:text="@string/regest" />
    </TableRow>

    <TableRow
        android:id="@+id/set_islogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:id="@+id/set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.darly.activities.widget.roundedimage.RoundedImageView
            android:id="@+id/set_userimage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:riv_border_color="@color/color_2"
            app:riv_border_width="1dp"
            app:riv_corner_radius="100dp" />
    </TableRow>

</RelativeLayout>