<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_top_view_click"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/w_white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:id="@+id/home_fragment_top_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ask_doc" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/home_fragment_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_top_askd"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_large" />

            <Button
                android:id="@+id/home_fragment_top_mark"
                android:layout_width="50dp"
                android:layout_height="23dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:text=""
                android:textColor="@color/w_white"
                android:textSize="@dimen/textview_shouye_tijianyuyue" />
        </LinearLayout>

        <TextView
            android:id="@+id/home_fragment_top_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_top_askfoans"
            android:textColor="@color/w_l_gray"
            android:textSize="@dimen/textview_general" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right" />

</LinearLayout>